--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perinci-Access-InProcess
 
+0.31     2012-08-28 (SHARYANTO)
+
+         Implement confirmation (Rinci 1.1.27). Pass Riap request key 'confirm'
+         => 1 to pass '-confirm' to function (via TM).
+
+
 0.30     2012-08-22 (SHARYANTO)
 
          Adjust to Rinci 1.1.25. No longer check transaction support of
