Import of SHARYANTO/Perinci-Access-InProcess-0.33 from CPAN.
gitpan-cpan-distribution: Perinci-Access-InProcess
gitpan-cpan-version:      0.33
gitpan-cpan-path:         SHARYANTO/Perinci-Access-InProcess-0.33.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perinci-Access-InProcess
 
+0.33     2012-08-29 (SHARYANTO)
+
+         - Support 'dry_run' in call action (Riap 1.1.19).
+
+
 0.32     2012-08-28 (SHARYANTO)
 
          Pass confirmation for actions 'undo' and 'redo' too (actually those are
