Import of SHARYANTO/Perinci-Access-InProcess-0.34 from CPAN.
gitpan-cpan-distribution: Perinci-Access-InProcess
gitpan-cpan-version:      0.34
gitpan-cpan-path:         SHARYANTO/Perinci-Access-InProcess-0.34.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perinci-Access-InProcess
 
+0.34     2012-08-29 (SHARYANTO)
+
+         - Support '-tx_action_id' to tx function in dry run mode (Rinci
+           1.1.28).
+
+
 0.33     2012-08-29 (SHARYANTO)
 
          - Support 'dry_run' in call action (Riap 1.1.19).
