--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perinci-Access-InProcess
 
+0.36     2012-10-24 (SHARYANTO)
+
+         - Pass -progress special argument containing Progress::Any object to
+           functions which set 'progress' feature to true.
+
+
 0.35     2012-08-29 (SHARYANTO)
 
          - Pass -dry_run => 1 to tx function in dry run mode, so the function
