Import of SHARYANTO/Perinci-Access-InProcess-0.37 from CPAN.
gitpan-cpan-distribution: Perinci-Access-InProcess
gitpan-cpan-version:      0.37
gitpan-cpan-path:         SHARYANTO/Perinci-Access-InProcess-0.37.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perinci-Access-InProcess
 
+0.37     2012-10-31 (SHARYANTO)
+
+         - Add option: cache_size (to make it possible to disable caching).
+
+         - Update to Perinci::Sub::Wrapper 0.33.
+
+
 0.36     2012-10-24 (SHARYANTO)
 
          - Pass -progress special argument containing Progress::Any object to
