--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Perl code
 
 VERSION
-    version 0.37
+    version 0.38
 
 SYNOPSIS
      # in Your/Module.pm
@@ -139,6 +139,18 @@ METHODS
         If set, code will be executed the first time Perl module is
         successfully loaded.
 
+    *   use_wrapped_sub => BOOL (default: 1)
+
+        If set to false, then wil use original subroutine instead of wrapped
+        one, for example if you are very concerned about performance (do not
+        want to add another eval {} and subroutine call introduced by
+        wrapping) or do not need the functionality provided by the wrapper
+        (e.g. your function does not die and already validates its
+        arguments, etc).
+
+        Can also be set on a per-entity basis by setting the
+        "_perinci.access.inprocess.use_wrapped_sub" metadata property.
+
     *   extra_wrapper_args => HASH
 
         If set, will be passed to Perinci::Sub::Wrapper's wrap_sub() when
@@ -189,6 +201,18 @@ METHODS
         normalized by Perinci::Sub::Wrapper.
 
 FAQ
+  Why wrap?
+    The wrapping process accomplishes several things, among others: checking
+    of metadata, normalization of schemas in metadata, also argument
+    validation and exception trapping in function.
+
+    The function wrapping introduces a small overhead when performing a sub
+    call (typically around several to tens of microseconds on an Intel Core
+    i5 1.7GHz notebook). This is usually smaller than the overhead of
+    Perinci::Access::InProcess itself (typically in the range of 100
+    microseconds). But if you are concerned about the wrapping overhead, see
+    the "use_wrapped_sub" option.
+
   Why %SPEC?
     The name was first chosen when during Sub::Spec era, so it stuck.
 
