Import of SHARYANTO/Perinci-Access-InProcess-0.39 from CPAN.
gitpan-cpan-distribution: Perinci-Access-InProcess
gitpan-cpan-version:      0.39
gitpan-cpan-path:         SHARYANTO/Perinci-Access-InProcess-0.39.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Perinci-Access-InProcess
 
+0.39     2012-11-02 (SHARYANTO)
+
+         [BUG FIXES]
+
+         - 'list' action didn't work (fails to list subpackages) when requested
+           module does not exist.
+
+
 0.38     2012-11-02 (SHARYANTO)
 
          - Add option: use_wrapped_sub (to make it possible to use call original
