--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perinci-Access-InProcess
 
+0.41     2013-08-13 (SHARYANTO)
+
+         - Bug fix for parse_url().
+
+
 0.40     2013-08-13 (SHARYANTO)
 
          - Remove dependency on Perinci::Util::get_package_meta_accessor
