Import of SHARYANTO/Perinci-Access-InProcess-0.45 from CPAN.
gitpan-cpan-distribution: Perinci-Access-InProcess
gitpan-cpan-version:      0.45
gitpan-cpan-path:         SHARYANTO/Perinci-Access-InProcess-0.45.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Perinci-Access-InProcess
 
+0.45     2013-09-05 (SHARYANTO)
+
+         [BUG FIXES]
+
+         - Fix regression: if package already exists (like 'main'), don't fail
+           the module loading. This broke a lot of scripts yesterday.
+
+
 0.44     2013-09-04 (SHARYANTO)
 
          - meta on '/' now works.
